FLEX-4467 ~ Adds paging and sorting to web-device-simulator.
- paging for the list of devices
- page size can be chosen
- sort direction can be chosen

--- a/web-device-simulator/src/main/resources/i18n/messages.properties
+++ b/web-device-simulator/src/main/resources/i18n/messages.properties
@@ -26,6 +26,8 @@ entity.log.encoded = Encoded
 
 device.list.page.title = Devices
 device.list.link.label = Back to Devices
+device.list.devicesperpage.label = Devices per page
+device.list.sortdirection.label = Sort direction
 device.create.link.label = Add Device
 device.create.page.title = Add new Device
 device.create.page.device.label = Device
