--- a/osgp/protocol-adapter-oslp/web-device-simulator/src/main/resources/i18n/messages.properties
+++ b/osgp/protocol-adapter-oslp/web-device-simulator/src/main/resources/i18n/messages.properties
@@ -16,6 +16,7 @@ entity.device.selfTestActive = Selftest
 entity.device.sequenceNumber=Sequence number
 entity.device.eventNotifications = Event notifications
 entity.device.protocol = Protocol
+entity.device.firmwareVersion = Firmware version
 
 entity.log.time = Time
 entity.log.device = Device
