--- a/osgp/protocol-adapter-oslp/web-device-simulator/src/main/resources/i18n/messages.properties
+++ b/osgp/protocol-adapter-oslp/web-device-simulator/src/main/resources/i18n/messages.properties
@@ -40,6 +40,7 @@ device.edit.page.device.reboot = DeviceReboot
 device.edit.page.device.tariff.switching = TariffSwitching
 device.edit.page.device.light.switching = LightSwitching
 device.edit.page.device.event.notification = EventNotification
+device.edit.page.device.reboot.delay = Reboot delay (seconds)
 device.edit.page.submit.label = Save Changes
 device.edit.page.commands.label = Commands
 device.edit.page.commands.send.label = Send OSLP Command
